Bug 68537 - SIDEBAR: Wrong icon and tooltip for "Paragraph color" button
Summary: SIDEBAR: Wrong icon and tooltip for "Paragraph color" button
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: Other All
: medium minor
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks: Sidebar-Properties-Paragraph
  Show dependency treegraph
 
Reported: 2013-08-25 16:16 UTC by Maxim Monastirsky
Modified: 2016-10-24 17:03 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (16.37 KB, image/png)
2013-08-25 16:16 UTC, Maxim Monastirsky
Details
screenshot of paragraph color controls (60.00 KB, image/png)
2013-10-21 11:43 UTC, Maxim Monastirsky
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Monastirsky 2013-08-25 16:16:51 UTC
Created attachment 84606 [details]
screenshot

The icon & tooltip for "Paragraph color" button isn't the same as on the Formatting toolbar, see screenshot.
Comment 1 Jean-Baptiste Faure 2013-09-22 09:50:01 UTC
I reproduce with LO 4.1.3.0.0+ under ubuntu 13.04.
I think that the correct behavior is the one of sidebar which show the current paragraph background color.

Best regards. JBF
Comment 2 Jorendc 2013-10-15 18:47:34 UTC
(In reply to comment #1)
> I reproduce with LO 4.1.3.0.0+ under ubuntu 13.04.
> I think that the correct behavior is the one of sidebar which show the
> current paragraph background color.
> 
> Best regards. JBF

I think the correct behavior is the one in the toolbar. As you can see, the icon in the sidebar has a square. The color just overlaps the right side of the square completely.

Kind regards,
Joren
Comment 3 Maxim Monastirsky 2013-10-21 11:31:53 UTC
(In reply to comment #1)
> I think that the correct behavior is the one of sidebar which show the
> current paragraph background color.
The toolbar button also shows the current paragraph background color. Just try to change the color, and you'll see.
Comment 4 Maxim Monastirsky 2013-10-21 11:43:37 UTC
Created attachment 87919 [details]
screenshot of paragraph color controls

Just noticed another difference between the two: Looks like they're using two completely different controls. The sidebar control is smaller and has a scrollbar. Also the toolbar control has a caption ('Background'), which you can drag and turn into a floating toolbar. It's not the case with the sidebar control. Also note the string difference: 'No Fill' -> 'No Color'.

Note that sidebar's 'Font color' & 'Highlighting' buttons & controls are exactly the same as on the toolbar, so there is no reason why Paragraph color should be different.
Comment 5 Maxim Monastirsky 2013-11-18 20:16:09 UTC
(In reply to comment #4)
> Just noticed another difference between the two: Looks like they're using
> two completely different controls. The sidebar control is smaller and has a
> scrollbar. Also the toolbar control has a caption ('Background'), which you
> can drag and turn into a floating toolbar. It's not the case with the
> sidebar control. Also note the string difference: 'No Fill' -> 'No Color'.
Already reported in Bug 67065.
Comment 6 Commit Notification 2014-02-14 14:54:52 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4eb7f3911921817a8f8d56a2bafb54d1fd12afcd

fdo#68537 Correct icon and tooltip for background color



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.