fdo#68537 Correct icon and tooltip for background color

Just to close this bug, more changes are expected.

Change-Id: I1017481211a5a1b9219f02fed3af31be0399e27a